Added postman folder, changed CSS around a bit

--- a/public/style.css
+++ b/public/style.css
@@ -3,12 +3,13 @@ Blog Server
 John Isabella III */
 
 :root {
-  --primary: #4caf50;
+  --primary: #46619e;
   --brown: #333;
 }
 
 body{
   margin: 0;
+  background-color: aquamarine;
 }
 
 .header {
@@ -45,16 +46,16 @@ th {
 }
 
 tr:nth-child(even) {
-  background-color: #f2f2f2;
+  background-color: gray;
 }
 
 tr:hover {
-  background-color: #ddd;
+  background-color: lightskyblue;
 }
 
 /* Form Container Styles */
 .form-container {
-  background: #f2f2f2;
+  background: orange;
   padding: 20px;
   width: 500px;
   box-shadow: 3px 3px 5px var(--brown);
